# cocoapi

./: .gitignore
.github/workflows/: publish.yml
PythonAPI/: MANIFEST.in  pyproject.toml  setup.py
PythonAPI/pycocotools/: _mask.pyx  mask.py
common/: maskApi.c  maskApi.h
